<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6F5050"
    android:gravity="center"
    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="16dp"
        android:elevation="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF0000"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/infoo"/>
            </LinearLayout>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="56dp"
                android:layout_marginStart="110dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:text="@string/info"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginStart="15dp"
                        android:textSize="13sp"
                        android:text="@string/address"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="#FF0000" />
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="16dp"
            android:elevation="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:background="@drawable/bc"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="115dp"
                        android:layout_height="155dp"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/pp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            app:srcCompat="@drawable/logoo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_margin="15dp"
                            android:text="STUDENT ID CARD"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF0000"
                            android:textSize="18sp"
                            android:layout_marginStart="15dp"
                            android:text="@string/name2"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:layout_marginStart="15dp"
                            android:text="@string/program" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:text="@string/Id_no" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:text="@string/StD" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:text="@string/VTD" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:text="@string/BG" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>